<resources>
    <string name="app_name">Inventory</string>

    <string name="dummy_button">Fin Presentación</string>
    <string name="dummy_content">Iniciando INVENTORY</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_prcpal">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inventory</string>
    <string name="nav_header_subtitle">inventory@inventory.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_invntro">Escanear Codigo</string>
    <string name="txt_cmpras">Registrar Producto</string>
    <string name="txt_vntas">Ventas</string>
    <string name="txt_ingrsos">Ingreso Productos</string>
    <string name="txt_gtos">Gastos</string>
    <string name="txt_clntes">Salir</string>
    <string name="txt_prvdres">Lista de Productos</string>
    <string name="txt_rprtes">Proveedores</string>

    <string name="img_invntro_desc">Inventario</string>
    <string name="img_cmpras_desc">Compras</string>
    <string name="img_vntas_desc">Ventas</string>
    <string name="img_ingrsos_desc">Ingresos</string>
    <string name="img_gtos_desc">Gastos</string>
    <string name="img_clntes_desc">Clientes</string>
    <string name="img_prvdres_desc">Proveedores</string>
    <string name="img_rprtes_desc">Proveedores</string>


    <string name="menu_invntrio">Inventario</string>
    <string name="menu_vnta">Ventas</string>
    <string name="menu_cmpra">Compras</string>
    <string name="menu_ingrso">Ingresos</string>
    <string name="menu_gsto">Gastos</string>
    <string name="menu_prvdor">Proveedor</string>
    <string name="menu_clnte">Clientes</string>
    <string name="menu_rprte">Reportes</string>
    <string name="menu_share">Compratir</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_slir">Salir</string>

    <string name="title_activity_final">FinalActivity</string>
    <string name="dummy_buttonfnal">Fin Presentación</string>
    <string name="dummy_contentfnal">Finalizando INVENTORY</string>
    <string name="title_activity_main_prdcto">MainPrdcto</string>


</resources>
