<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainPrcpal"
    tools:showIn="@layout/app_bar_main_prcpal">

    <ImageView
        android:id="@+id/img_Invntro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/img_invntro_desc"
        android:onClick="open_invntro"
        app:layout_constraintBottom_toTopOf="@+id/txt_vntas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_invntro"
        app:srcCompat="@drawable/logoinventory" />

    <TextView
        android:id="@+id/txt_invntro"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="113dp"
        android:gravity="center"
        android:text="@string/txt_invntro"
        app:layout_constraintBottom_toTopOf="@+id/txt_cmpras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_cmpra"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/img_cmpras_desc"
        app:layout_constraintBottom_toTopOf="@+id/txt_ingrsos"
        app:layout_constraintEnd_toStartOf="@+id/img_vnta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cmpras"
        app:srcCompat="@drawable/prcpalcompras" />

    <TextView
        android:id="@+id/txt_cmpras"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/txt_cmpras"
        app:layout_constraintBottom_toTopOf="@+id/img_cmpra"
        app:layout_constraintEnd_toStartOf="@+id/txt_vntas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_invntro" />

    <ImageView
        android:id="@+id/img_vnta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/img_vntas_desc"
        app:layout_constraintBottom_toTopOf="@+id/txt_gstos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_cmpra"
        app:layout_constraintTop_toBottomOf="@+id/txt_vntas"
        app:srcCompat="@drawable/prcpalventas" />

    <TextView
        android:id="@+id/txt_vntas"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="7dp"
        android:gravity="center"
        android:text="@string/txt_vntas"
        app:layout_constraintBottom_toTopOf="@+id/img_vnta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_cmpras"
        app:layout_constraintTop_toBottomOf="@+id/img_Invntro" />

    <ImageView
        android:id="@+id/img_Ingrso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img_ingrsos_desc"
        app:layout_constraintBottom_toTopOf="@+id/txt_clntes"
        app:layout_constraintEnd_toStartOf="@+id/img_gsto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingrsos"
        app:srcCompat="@drawable/prcpalingresos" />

    <TextView
        android:id="@+id/txt_ingrsos"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        android:gravity="center"
        android:text="@string/txt_ingrsos"
        app:layout_constraintBottom_toTopOf="@+id/img_Ingrso"
        app:layout_constraintEnd_toStartOf="@+id/txt_gstos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cmpra" />

    <ImageView
        android:id="@+id/img_gsto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/img_gtos_desc"
        app:layout_constraintBottom_toTopOf="@+id/txt_prvdres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_Ingrso"
        app:layout_constraintTop_toBottomOf="@+id/txt_gstos"
        app:srcCompat="@drawable/prcpalgastos" />

    <TextView
        android:id="@+id/txt_gstos"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="7dp"
        android:gravity="center"
        android:text="@string/txt_gtos"
        app:layout_constraintBottom_toTopOf="@+id/img_gsto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_ingrsos"
        app:layout_constraintTop_toBottomOf="@+id/img_vnta" />

    <ImageView
        android:id="@+id/img_clnte"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="146dp"
        android:contentDescription="@string/img_clntes_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_prvdres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_clntes"
        app:srcCompat="@drawable/prcpalclientes" />

    <TextView
        android:id="@+id/txt_clntes"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/txt_clntes"
        app:layout_constraintBottom_toTopOf="@+id/img_clnte"
        app:layout_constraintEnd_toEndOf="@+id/img_clnte"
        app:layout_constraintStart_toStartOf="@+id/img_clnte"
        app:layout_constraintTop_toBottomOf="@+id/img_Ingrso" />

    <ImageView
        android:id="@+id/img_prvdres"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/img_prvdres_desc"
        app:layout_constraintBottom_toTopOf="@+id/txt_rprtes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_clnte"
        app:layout_constraintTop_toBottomOf="@+id/txt_prvdres"
        app:srcCompat="@drawable/prcpalproveedores" />

    <TextView
        android:id="@+id/txt_prvdres"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="7dp"
        android:gravity="center"
        android:text="@string/txt_prvdres"
        app:layout_constraintBottom_toTopOf="@+id/img_prvdres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_clnte"
        app:layout_constraintTop_toBottomOf="@+id/img_gsto" />

    <ImageView
        android:id="@+id/img_rprte"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img_rprtes_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rprtes"
        app:srcCompat="@drawable/prcpalreportes" />

    <TextView
        android:id="@+id/txt_rprtes"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/txt_rprtes"
        app:layout_constraintBottom_toTopOf="@+id/img_rprte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_prvdres" />

</androidx.constraintlayout.widget.ConstraintLayout>